# touhou-demo

./: .gitignore  README.md
assets/: renderer2d.settings.json
assets/scenes/: main.scene.json
assets/sprites/player/: player.aseprite  player.sprite.json  player_bullet.aseprite  player_bullet.sprite.json
assets/viewports/: pixel.viewport.json
src/: CMakeLists.txt  registry.cpp
src/Components/: Bullet.cpp  Bullet.h  BulletEmitter.h  Player.cpp  Player.h  SpriteRenderer.cpp  SpriteRenderer.h
src/Systems/: BulletSystem.cpp  BulletSystem.h  DebugRenderingSystem.cpp  DebugRenderingSystem.h  PixelRenderingSystem.cpp  PixelRenderingSystem.h  PlayerSystem.cpp  PlayerSystem.h  SpriteRenderingSystem.cpp  SpriteRenderingSystem.h
